# openclaw-dashboard

./: .gitignore  DISTRIBUTION.md  Dockerfile  HYDRATION_FIX.md  INSTALLATION.md  OPENCLAW_DEVICE_PAIRING.md  README.md  TAURI_INTEGRATION.md  USER_MANUAL.md  WEBSOCKET_TLS_GUIDE.md  next.config.ts  package-lock.json  package.json  test_openclaw_auth.js  test_sign_formats.js  test_sign_verify.js  test_tweetnacl.js  test_verify_keys.js  test_webcrypto_browser.html  test_webcrypto_sign.js  verify_public_key.js  verify_rpc_fix.js
.next 2/dev/: prerender-manifest.json
.next 2/dev/cache/: .rscinfo
.next 2/dev/server/: next-font-manifest.js
.next 2/dev/server/app/: page_client-reference-manifest.js
.next 2/dev/types/: routes.d.ts  validator.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/agent-detail/: route.ts
src/app/api/agents/: route.ts
src/app/api/channels/: route.ts
src/app/api/cron/: route.ts
src/app/api/gateway-device/: route.ts
src/app/api/github-stars/: route.ts
src/components/: activity-log.tsx  agent-profile-modal.tsx  chat-input.tsx  contact-card.tsx  copy-button.tsx  device-monitor.tsx  lobster-avatar.tsx  lottie-lobster.tsx  network-architecture.tsx  openclaw-status-card.tsx  permission-modal.tsx  pty-terminal.tsx  settings-modal.tsx  smart-terminal.tsx  system-status-cards.tsx  toast-notifications.tsx  voice-animations.tsx  voice-visualizer.tsx  websocket-terminal.tsx
src/lib/: openclaw-websocket.ts  tauri-api.ts  tauri-pty.ts  utils.ts
(+10 files in other folders)
