[package]
name = "meetclaw"
version = "1.0.0"
description = "MeetClaw - OpenClaw Desktop Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.8"
anyhow = "1.0"
lazy_static = "1.4"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
